# mfv2d

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  basis.html  genindex.html  index.html  modules.html  noxfile.py  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: basis.doctree  index.doctree  modules.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree  sg_execution_times.doctree
.doctrees/modules/: _mfv2d.doctree  boundary.doctree  continuity.doctree  element.doctree  eval.doctree  examples.doctree  kform.doctree  mimetic2d.doctree  progress.doctree  refinement.doctree  solve_system.doctree  solving.doctree  system.doctree
.github/workflows/: cmake-single-platform.yml  documentation.yml
_downloads/00868dd7a9fdc693e685f8ac0de27d9e/: plot_advdif_post_hp_projection.ipynb
_downloads/057b288d41b24842867a950b7d10dbfb/: plot_mixed_poisson.ipynb
_downloads/0a495aa1f69b1d0cb94824dca19aacaa/: plot_cavity_flow.ipynb
_downloads/0d31b7061c9f723ae65670ceab1bee29/: plot_heat_direct.ipynb
_downloads/1629fd62756c033357fed85867a9a8a3/: plot_reaction.py
_downloads/20fbb105ffb381520f11eb578fa53652/: plot_reaction_mixed.py
_downloads/333a9c026e83f7c3e5b4b365c611f7fc/: plot_direct_poisson_refined.py
_downloads/35186daba8bc2a1fd78ec501bc87818d/: plot_direct_poison_post_hp.ipynb
_downloads/397236dc1ff4404e93f0037579832dc8/: plot_reaction_mixed.ipynb
_downloads/3c0b3ebd9c797e9804706764483eaa5b/: plot_heat_mixed.py
_downloads/569963cf9cdc986438c5c4022fd99834/: plot_cavity_flow.py
_downloads/5a4d551bae412b3e8796bb1c42d471b7/: plot_heat_direct.py
_downloads/6c0b3a044aeac283252eecb22c425e49/: plot_navier_stokes.py
_downloads/84d88cbcbad41a77daa95cf0d4450183/: plot_direct_poisson_refined_post_p.ipynb
_downloads/8585441a2d52dac4ca70eec4ee1725a6/: plot_direct_poisson_refined.ipynb
_downloads/8dd637a105325202dfacc7297db69d48/: plot_direct_poisson_refined_pre.ipynb
_downloads/adb0327a5d306213abac613db17cda43/: plot_direct_poisson_refined_post_p.ipynb
_downloads/b5692b199afdee8730823d6796bf8e05/: plot_vector_reaction.ipynb
_downloads/bf3e05d88504f7df9d6a6281ef053c5e/: plot_linear_adv_dif.py
_downloads/c23fa6ea51f3cd58d93ce08cd98efab5/: plot_direct_poisson_refined_pre.ipynb
_downloads/c7ab5a0f4920db990fea0417ce93f634/: plot_navier_stokes.ipynb
_downloads/c9772d35c598678eb773e70a04290d7a/: plot_heat_mixed.ipynb
_downloads/cedda4db6e1dcfad4d055df92e4937a7/: plot_linear_adv_dif.ipynb
_downloads/db772220d44b3f76ec55e3702bc308eb/: plot_direct_poisson.py
_downloads/de740905898da92e74629e7d54fdcef1/: plot_direct_poisson.ipynb
_downloads/e3c00fcf2989820f4cd32647db424751/: plot_stokes_flow.ipynb
_downloads/f44d66f9c399c2a25b4ca78d5e51a3bb/: plot_vector_reaction.py
_downloads/f9c8d5bc81652b7598c0da8c67a5b207/: plot_reaction.ipynb
_modules/: index.html
_modules/mfv2d/: _mfv2d.html  boundary.html  continuity.html  element.html  eval.html  examples.html  kform.html  mimetic2d.html  progress.html  refinement.html  solve_system.html  solving.html  system.html
_sources/: basis.rst  index.rst  modules.rst  sg_execution_times.rst
_sources/auto_examples/: index.rst
_sources/modules/: _mfv2d.rst  boundary.rst  eval.rst  kform.rst  progress.rst  refinement.rst  solve_system.rst  system.rst
auto_examples/: index.html  sg_execution_times.html
auto_examples/refinement/: index.html  plot_advdif_post_hp_projection.html  plot_direct_poison_post_hp.html  plot_direct_poisson_refined_post_p.html  plot_direct_poisson_refined_pre.html  sg_execution_times.html
auto_examples/steady/: index.html  plot_direct_poisson.html  plot_direct_poisson_refined.html  plot_direct_poisson_refined_post_p.html  plot_direct_poisson_refined_pre.html  plot_linear_adv_dif.html  plot_mixed_poisson.html  plot_navier_stokes.html  plot_stokes_flow.html  sg_execution_times.html
auto_examples/unsteady/: index.html  plot_cavity_flow.html  plot_heat_direct.html  plot_heat_mixed.html  plot_reaction.html  plot_reaction_mixed.html  plot_vector_reaction.html  sg_execution_times.html
doc/: .gitignore  conf.py  index.rst  polynomials.rst  sg_execution_times.rst
doc/source/: basis1d.rst  bernstein1d.rst  numerics.rst  polynomial1d.rst  product_basis.rst  splines1d.rst
docs/: conf.py  modules.rst  refs.bib  sg_execution_times.rst
docs/modules/: _mfv2d.rst  boundary.rst  continuity.rst  element.rst  eval.rst  examples.rst  kform.rst  mimetic2d.rst  progress.rst  solve_system.rst  solving.rst
examples/: GALLERY_HEADER.rst  plot_poisson_direct-2.py  plot_poisson_direct.py  plot_poisson_mixed.py
examples/not_ready_unsteady/: reaction.py  (+3 more)
modules/: _mfv2d.html  boundary.html  continuity.html  element.html  eval.html  examples.html  kform.html  mimetic2d.html  progress.html  refinement.html  solve_system.html  solving.html  system.html
src/: _module.c  basis1d.c  basis1d.h  bernstein.c  bernstein.h  common.c  common.h  common_defines.h  cubic_splines.c  cubic_splines.h  error.c  error.h  geoidobject.h  lagrange.c  lagrange.h  lineobject.c  lineobject.h  manifold.c  manifold.h  manifold1d.h  manifold2d.h  module.c  module.h  poly_basis.c  poly_basis.h  polynomial1d.c  polynomial1d.h  rbf.c  rbf.h  spline1d.c  spline1d.h  surfaceobject.h
tests/: import_test.py  test_apply_incidence-c.py  test_apply_incidence.py  test_base_geo.py  test_basis.py  test_bernstein.py  test_bytecode.py  test_c_exports.py  test_compute_fields.py  test_crs_matrix.py  test_dofs.py  test_element_equation.py  test_element_form_specs.py  test_element_matrix.py  test_element_system.py  test_enums.py  test_eval_mass.py  test_explicit.py  test_extension.py  test_givens.py  test_gll.py  test_incidence_python.py  test_interior.py  test_interior_element.py  test_lagrange.py  test_legendre.py  test_lil.py  test_linalg_inverse.py  test_manifold2d.py  test_mesh.py  test_mesh1d.py  test_mesh2d.py  test_polybasis.py  test_polynomial1d.py  test_polynomial2d.py  test_precompute.py  test_projections.py  test_singularlu.py  test_solving.py  test_spline.py  (+4 more)
(+299 files in other folders)
