[project]
name = "mfv2d"
version = "0.0.1a"
authors = [{ name = "Jan Roth", email = "r0th.j4n@gmail.com" }]
description = "Mimetic Finite Element Solver for 2D."
requires-python = ">=3.10"
dependencies = ["numpy>=2.0.0", "scipy", "pyvista"]


[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# cmake.verbose = true
cmake.build-type = "Release"
cmake.source-dir = "."
build.verbose = true
logging.level = "INFO"
editable.verbose = true
build-dir = "build/{wheel_tag}"


[project.optional-dependencies]
dev = [
    "build",
    "scikit-build-core",
    "mypy",
    "npt-promote",
    "pytest",
    "pytest-cov",
    "interrogate",
    "nox",
    "pre-commit",
    "codespell",
    "trame",
    "trame-vtk",
    "trame-vuetify",
    "tomli",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-favicon",
    "sphinx-design",
    "sphinx-gallery",
    "pyvista[jupyter,trame]",
    "pypandoc",
    "pytest-sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-toolbox",
    "sphinxcontrib-websupport",
    "sphinxcontrib-asciinema",
    "sphinxcontrib-bibtex",
    "sphinx_book_theme",
    "jupyter-sphinx",
    "imageio",
    "rmsh@git+https://github.com/j4nr0th/rmesh",
]


[tool.mypy]
mypy_path = "python/mfv2d"
plugins = ["npt_promote"]
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
strict_equality = true

[tool.codespell]
skip = "sandbox/*"
count = true

[tool.ruff]
exclude = [".venv", ".nox", ".pytest_cache", ".vscode", "doc"]
line-length = 90

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ["E", "W", "D", "I", "F", "ARG", "A", "FA", "ICN", "TID"]
ignore = ["ARG002"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest]
exclude_also = ["if TYPE_CHECKING:", "@(abc\\.)?abstractmethod"]
addopts = ["--doctest-modules", "-ra", "--cov=mfv2d"]
testpaths = ["tests", "src"]
console_output_style = "count"


[tool.interrogate]
ignore-init-method = true
fail-under = 100
exclude = ["sandbox", "doc", "build", ".*/", "cmake-*/"]
style = "sphinx"
verbose = 1
